# code-of-conduct-generator

./: LICENSE  Makefile  README.md  pyproject.toml
src/code_of_conduct_generator/: main.py
templates/: code_of_conduct.jinja
