[project]
name = "code-of-conduct-generator"
version = "0.1.0"
description = "Generate code of conduct document"
authors = [
    {name = "Koen van Esterik", email = "koen@vanesterik.dev"},
]
dependencies = ["click>=8.2.1", "jinja2>=3.1.6", "caseutil>=0.7.2"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
